--- a/src/css/_base.scss
+++ b/src/css/_base.scss
@@ -9,7 +9,7 @@ $primary-color: #464646;
 $darker_color: darken($primary-color, 10%);
 $darkest_color: darken($primary-color, 14%);
 $light_color: lighten($primary-color, 100%);
-$linecolor: lighten($primary-color, 30%);
+$detailcolor: lighten($primary-color, 30%);
 
 @mixin width($width, $max) {
     width: $width;
