--- a/src/css/_base.scss
+++ b/src/css/_base.scss
@@ -1,9 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Russo+One&display=swap');
 
 $font-stack: 'Poppins';
 $paragraph-text: 'Inter';
+$navtext: 'Russo One', sans-serif;
 
 $primary-color: #464646;
 $darker_color: darken($primary-color, 10%);
