--- a/src/css/_base.scss
+++ b/src/css/_base.scss
@@ -1,18 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@600&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Russo+One&display=swap');
 
 $font-stack: 'Poppins';
 $paragraph-text: 'Inter';
-$navtext: 'Russo One', sans-serif;
 
 $primary-color: #464646;
+$deviating-color: rgb(240, 240, 78);
+
 $darker_color: darken($primary-color, 10%);
 $darkest_color: darken($primary-color, 14%);
 $lighter_color: lighten($primary-color, 10%);
 $light_color: lighten($primary-color, 100%);
 $detailcolor: lighten($primary-color, 30%);
+
+$border-style: 1px solid;
 
 @mixin width($width, $max) {
     width: $width;
@@ -38,4 +39,9 @@ $detailcolor: lighten($primary-color, 30%);
 @mixin space($padding, $margin) {
     padding: $padding;
     margin: $margin;
+}
+
+@mixin border($border, $radius) {
+    border: $border;
+    border-radius: $radius;
 }
