--- a/src/css/_layout.scss
+++ b/src/css/_layout.scss
@@ -12,47 +12,56 @@ body {
 }
 
 header {
-    display: flex;
-    justify-content: center;
+    @include align(flex, center, center);
     flex-direction: column;
     width: 800px;
-    align-items: center;
 
-    img { width: 150px; padding: 2em; margin-top: 1em; }
+    img { @include space(2em, 1em 0 0 0); width: 150px; }
 }
 
 nav {
+    @include border($border-style $detailcolor, 0.2em 0.2em 0 0);
     width: 100%;
-    border-radius: 0.2em 0.2em 0 0;
     padding: 1em 0 1em 0;
     background-color: $detailcolor;
-    border-right: 1px solid $detailcolor;
-    border-left: 1px solid $detailcolor;
-    border-top: 1px solid $detailcolor;
+    border-top-width: 0;
 
     ul {
+        @include space(0, 0);
         list-style: none;
-        padding: 0;
-        margin: 0;
         display: flex;
         justify-content: center;
     }
 
     li {
         margin-right: 20px;
+        transition: 0.1s;
 
-        &:hover { border-bottom: 3px solid $light_color; }
+        &:hover { transform: scale(1.2); }
         &:last-child { margin-right: 0; }
-        a { color: white; text-decoration: none; font: 100% $navtext; }
+        a { text-decoration: none; padding: 5px; }
+    }
+
+    .material-symbols-outlined { 
+        font-size: 30px; 
+        color: $deviating-color; 
+        font-weight: 400; 
+    }
+
+    #position { 
+        background-color: $lighter_color; 
+        border-radius: 5px; 
+        padding: 5px; 
     }
 }
+
+
+
 main {
     @include align(flex, center, center);
+    @include size(800px, 200px);
+    @include border($border-style $detailcolor, 0 0 0.2em 0.2em);
     background-color: $lighter_color;
-    border: 1px solid $detailcolor;
-    width: 800px;
-    border-radius: 0 0 0.2em 0.2em;
-    height: 200px;
 }
 
 footer {
