--- a/src/css/_layout.scss
+++ b/src/css/_layout.scss
@@ -7,7 +7,8 @@ body {
     flex-direction: column; 
 
     h1 { text-align: center; }
-    h2 { font-size: 20px; text-align: center; }
+    h2 { font-size: 20px; }
+    h3 { font-size: 18px; }
     p { font: 100% $paragraph-text; }
 }
 
@@ -55,11 +56,9 @@ nav {
     }
 }
 
-
-
 main {
     @include align(flex, center, center);
-    @include size(800px, 200px);
+    @include size(800px, auto);
     @include border($border-style $detailcolor, 0 0 0.2em 0.2em);
     background-color: $lighter_color;
 }
