--- a/src/css/_layout.scss
+++ b/src/css/_layout.scss
@@ -6,10 +6,11 @@ body {
     text-align: left; font: 100% $font-stack; 
     flex-direction: column; 
 
-    h1 { text-align: center; }
-    h2 { font-size: 20px; }
-    h3 { font-size: 18px; }
-    p { font: 100% $paragraph-text; }
+    h1 { text-align: center; font-size: 25px; padding: 1em 0 1em 0; }
+    h2 { font-size: 20px; margin: 0; }
+    h3 { font-size: 18px; margin: 0.5em 0 0 0;}
+    h4 { margin: 0; }
+    p { font: 100% $paragraph-text; margin-top: 8px; }
 }
 
 header {
@@ -61,6 +62,18 @@ main {
     @include size(800px, auto);
     @include border($border-style $detailcolor, 0 0 0.2em 0.2em);
     background-color: $lighter_color;
+
+    #result {
+        width: 100%;
+    }
+
+    .workexperience {
+        padding: 1.5em 0 2em 2em;
+
+        h2, h3, h4 { letter-spacing: 0.5px; }
+        .desc { font-size: 22px; color: $deviating-color; }
+        &:nth-child(even) { background-color: $primary-color; } 
+    }
 }
 
 footer {
