--- a/src/css/_layout.scss
+++ b/src/css/_layout.scss
@@ -159,7 +159,7 @@ form {
 
 footer {
     @include align(flex, center, center);
-    margin-top: 5em;
+    margin: 3em 0;
     gap: 1em; 
 
     img { @include size(40px, 15px); }
