cleaned code and added color variable

--- a/src/css/_base.scss
+++ b/src/css/_base.scss
@@ -6,6 +6,7 @@ $paragraph-text: 'Inter';
 
 $primary-color: #464646;
 $deviating-color: rgb(240, 240, 78);
+$deviating-light: rgb(252, 252, 168);
 
 $darker_color: darken($primary-color, 10%);
 $darkest_color: darken($primary-color, 14%);
