--- a/src/css/_layout.scss
+++ b/src/css/_layout.scss
@@ -80,7 +80,7 @@ main {
             margin-right: 25px;
             transition: 0.1s;
 
-            &:hover { transform: scale(1.2); cursor: pointer; } }
+            &:hover { transform: scale(1.2); cursor: pointer; color: $deviating-light; } }
 
         h2, h3, h4 { letter-spacing: 0.5px; }
         .desc { @include text(22px, $deviating-color); }
