--- a/src/css/_layout.scss
+++ b/src/css/_layout.scss
@@ -64,6 +64,7 @@ main {
     @include border($border-style $detailcolor, 0 0 0.2em 0.2em);
     background-color: $lighter_color;
     flex-direction: column;
+    box-shadow: 0px 8px 10px rgba(39, 39, 39, 0.575);
 
     #result { width: 100%; }
 
@@ -71,6 +72,7 @@ main {
         padding: 1.5em 0 2em 2em;
         display: flex;
         flex-direction: column;
+        box-shadow: 0px 5px 7px rgba(0, 0, 0, 0.103);
 
         .material-symbols-outlined {
             @include text(30px, $deviating-color);
@@ -115,6 +117,7 @@ form {
     background-color: $primary-color;
     border-radius: 5px 5px 0 0;
     width: 400px;
+    box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.301);
 
     div {
         margin: 1em 0 0 0;
