--- a/src/css/_layout.scss
+++ b/src/css/_layout.scss
@@ -1,4 +1,5 @@
 @use 'base' as *;
+@use 'animations' as *;
 
 body {
     @include color($primary-color, $light_color);
@@ -67,6 +68,7 @@ main {
     box-shadow: 0px 8px 10px rgba(39, 39, 39, 0.575);
 
     #result { width: 100%; }
+    #fade { animation: fadeIn 0.3s ease-in; }
 
     .workexperience {
         padding: 1.5em 0 2em 2em;
@@ -86,7 +88,7 @@ main {
 
         h2, h3, h4 { letter-spacing: 0.5px; }
         .desc { @include text(22px, $deviating-color); }
-        &:nth-child(even) { background-color: $primary-color; } 
+        &:nth-child(odd) { background-color: $primary-color; } 
     }
 
     #addbtn {
@@ -179,7 +181,7 @@ footer {
     }
 
     header { width: 100%; }
-    #textcontainer { border: $border-style $detailcolor; }
+    .textcontainer { border: $border-style $detailcolor; }
 }
 
 @media only screen and (max-width: 500px) {
